crates/shipper-core/src/engine/parallel/snapshots/shipper_core__engine__parallel__tests__snapshot_tests__snapshot_chunk_by_max_concurrent_larger_than_items.snap
---
source: crates/shipper-core/src/engine/parallel/tests.rs
expression: chunks
---
[
    [
        "a",
        "b",
    ],
]
