crates/shipper-core/src/engine/parallel/snapshots/shipper_core__engine__parallel__tests__snapshot_tests__snapshot_chunk_by_max_concurrent_one.snap
---
source: crates/shipper-core/src/engine/parallel/tests.rs
expression: chunks
---
[
    [
        "x",
    ],
    [
        "y",
    ],
    [
        "z",
    ],
]
