crates/shipper-core/src/engine/parallel/snapshots/shipper_core__engine__parallel__tests__snapshot_tests__snapshot_execution_plan_diamond.snap
---
source: crates/shipper-core/src/engine/parallel/tests.rs
expression: layout
---
[
    (
        0,
        [
            "a",
        ],
    ),
    (
        1,
        [
            "b",
            "c",
        ],
    ),
    (
        2,
        [
            "d",
        ],
    ),
]
