crates/shipper-core/src/engine/parallel/snapshots/shipper_core__engine__parallel__tests__snapshot_tests__snapshot_execution_plan_independent_forest.snap
---
source: crates/shipper-core/src/engine/parallel/tests.rs
expression: layout
---
[
    (
        0,
        [
            "utils-a",
            "utils-b",
            "utils-c",
            "utils-d",
        ],
    ),
]
