crates/shipper-core/src/engine/parallel/snapshots/shipper_core__engine__parallel__tests__snapshot_tests__snapshot_execution_plan_wide_fan_out.snap
---
source: crates/shipper-core/src/engine/parallel/tests.rs
expression: layout
---
[
    (
        0,
        [
            "core",
        ],
    ),
    (
        1,
        [
            "cli",
            "web",
            "api",
            "worker",
            "bench",
        ],
    ),
]
