crates/shipper-core/src/engine/parallel/snapshots/shipper_core__engine__parallel__tests__snapshot_tests__snapshot_parallel_config_default.snap
---
source: crates/shipper-core/src/engine/parallel/tests.rs
expression: config
---
ParallelConfig {
    enabled: false,
    max_concurrent: 4,
    per_package_timeout: 1800s,
}
