crates/shipper-core/src/engine/parallel/snapshots/shipper_core__engine__parallel__tests__snapshot_tests__snapshot_policy_effects_balanced.snap
---
source: crates/shipper/src/engine/parallel/mod.rs
assertion_line: 3186
expression: effects
---
PolicyEffects {
    run_dry_run: true,
    check_ownership: false,
    strict_ownership: false,
    readiness_enabled: true,
}
